employeechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeechart
  labels:
    app: employeechart
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: employeechart
